@startuml 11_database_er_diagram
!theme plain

title TeleMed AI Platform — Entity Relationship (ER) Diagram (SQLAlchemy / PostgreSQL Schema)

entity "users" as users {
  *user_id : VARCHAR <<PK>>
  --
  *email : VARCHAR <<INDEX, UNIQUE>>
  *password_hash : VARCHAR
  *salt : VARCHAR
  *role : VARCHAR [PATIENT|DOCTOR|ADMIN]
  *created_at : VARCHAR
  *updated_at : VARCHAR
}

entity "patient_profiles" as patient_profiles {
  *patient_id : VARCHAR <<PK>>
  --
  *user_id : VARCHAR <<FK, UNIQUE>>
  *full_name : VARCHAR
  age : INTEGER
  gender : VARCHAR
  height_cm : FLOAT
  weight_kg : FLOAT
  contact_number : VARCHAR
  *created_at : VARCHAR
}

entity "doctor_profiles" as doctor_profiles {
  *doctor_id : VARCHAR <<PK>>
  --
  *user_id : VARCHAR <<FK, UNIQUE>>
  *full_name : VARCHAR
  *specialization : VARCHAR
  qualification : VARCHAR
  *registration_number : VARCHAR
  experience_years : INTEGER
  verification_status : VARCHAR [PENDING|VERIFIED|REJECTED]
  *created_at : VARCHAR
}

entity "doctor_credentials" as doctor_credentials {
  *document_id : VARCHAR <<PK>>
  --
  *doctor_id : VARCHAR <<FK>>
  *user_id : VARCHAR <<FK>>
  *document_type : VARCHAR
  *original_filename : VARCHAR
  *file_path : VARCHAR
  *uploaded_at : VARCHAR
}

entity "auth_sessions" as auth_sessions {
  *token : VARCHAR <<PK>>
  --
  *user_id : VARCHAR <<FK>>
  *expires_at : VARCHAR
  *created_at : VARCHAR
}

entity "health_records" as health_records {
  *record_id : VARCHAR <<PK>>
  --
  *user_id : VARCHAR <<FK>>
  *source_session_id : VARCHAR <<UNIQUE>>
  patient_id : VARCHAR
  *pipeline_version : VARCHAR [v3.3|v4.0]
  *effective_pathway : VARCHAR
  *active_modalities : TEXT
  *confirmed_features : TEXT [JSON]
  *prediction_snapshot : TEXT [JSON]
  xai_snapshot : TEXT [JSON]
  report_snapshot : TEXT [JSON]
  status : VARCHAR [ANALYZED]
  *created_at : VARCHAR
}

entity "consultations" as consultations {
  *consultation_id : VARCHAR <<PK>>
  --
  *patient_id : VARCHAR
  *user_id : VARCHAR <<FK>>
  assigned_doctor_id : VARCHAR <<FK>>
  *specialization : VARCHAR
  *reason : TEXT
  *urgency : VARCHAR [ROUTINE|URGENT]
  *status : VARCHAR [REQUESTED|IN_PROGRESS|COMPLETED]
  *created_at : VARCHAR
  *updated_at : VARCHAR
}

entity "consultation_notes" as consultation_notes {
  *note_id : VARCHAR <<PK>>
  --
  *consultation_id : VARCHAR <<FK, UNIQUE>>
  *doctor_id : VARCHAR <<FK>>
  *doctor_user_id : VARCHAR
  *author_name : VARCHAR
  *assessment : TEXT
  *patient_summary : TEXT
  *created_at : VARCHAR
}

entity "appointments" as appointments {
  *appointment_id : VARCHAR <<PK>>
  --
  *consultation_id : VARCHAR <<FK>>
  *doctor_id : VARCHAR <<FK>>
  *patient_id : VARCHAR <<FK>>
  *slot_id : VARCHAR <<FK>>
  *slot_start : VARCHAR
  *slot_end : VARCHAR
  *status : VARCHAR [REQUESTED|CONFIRMED|COMPLETED]
}

entity "audit_events" as audit_events {
  *event_id : VARCHAR <<PK>>
  --
  *actor_user_id : VARCHAR <<INDEX>>
  *role : VARCHAR
  *action : VARCHAR <<INDEX>>
  *resource_type : VARCHAR
  prev_hash : VARCHAR
  *event_hash : VARCHAR
  *created_at : VARCHAR
}

' Relationships
users ||--o| patient_profiles : "has profile"
users ||--o| doctor_profiles : "has profile"
users ||--o{ auth_sessions : "maintains"
users ||--o{ health_records : "owns"
users ||--o{ consultations : "initiates"

doctor_profiles ||--o{ doctor_credentials : "submits"
doctor_profiles ||--o{ consultations : "assigned to"
doctor_profiles ||--o{ appointments : "conducts"
patient_profiles ||--o{ appointments : "attends"

consultations ||--o| consultation_notes : "contains"
consultations ||--o| appointments : "schedules"

@enduml
